# Codex-Cool

./: .gitignore  README.md  codex-cool.spec  config.example.yaml  pyproject.toml
src/codex_cool/: api.py  cli.py  config.py  desktop.py  injector.py  main.py
src/codex_cool/converters/: __init__.py  anthropic_chat.py  responses_chat.py  stream.py
src/codex_cool/frontend/: app.js  index.html  styles.css
src/codex_cool/models/: anthropic.py  chat.py  responses.py
src/codex_cool/proxy/: router.py
